Fix dark mode

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -35,7 +35,7 @@ body {
     padding: 4px;
 }
 .theme-button:hover {
-    background-color: #a1a6b3;
+    background-color: #b4b8bf;
 }
 
 .theme-icon {
@@ -75,7 +75,7 @@ body {
     filter: invert(56%) sepia(23%) saturate(508%) hue-rotate(314deg) brightness(93%) contrast(89%);
 }
 .social-icon:hover {
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+    filter: invert(99%) sepia(8%) saturate(1011%) hue-rotate(178deg) brightness(99%) contrast(91%);
 }
 
 .large-screens-only {
